# autonomous-grid

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  build_diagram.py  config.py  doggi_nodes.py  fetch_devices.py  install.sh  media_runtime.py  paths.py  pyproject.toml  runtime.py  server.py  test_remote_mode_e2e.sh
.github/workflows/: ci.yml  release.yml
cli/: __init__.py  _main.py  agent.py  auth.py  cloud_grid.py  cloud_provider.py  cloud_request.py  codex_signin.py  device.py  dispatch.py  engine.py  grid.py  internet_grid.py  internet_provider.py  internet_request.py  media_io.py  mode.py  models.py  parser.py  provider.py  remote_grid.py  remote_overview.py  remote_price.py  remote_provider.py  remote_request.py  remote_router.py  request.py
cloud/: __init__.py  control_plane.py  credentials.py  probe.py  relay.py  serve.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  RUNBOOK-LOCAL-E2E.md  build_diagram.py  cli.md  codex-quickstart.md  local-flow-and-logging.md  protocol.md  reference.md
docs/adr/: 0001-mode-state-and-dispatch.md  0002-cloud-sign-in.md  0002-internet-sign-in.md  0002-remote-sign-in.md  0003-cloud-grid-lifecycle.md  0003-internet-grid-lifecycle.md  0003-remote-grid-lifecycle.md  0004-cloud-provider-serve.md  0004-internet-provider-serve.md  0004-remote-provider-serve.md  0005-cloud-consume.md  0005-internet-consume.md  0005-remote-consume.md  0006-cloud-membership.md  0006-internet-membership.md  0006-remote-membership.md  0007-cloud-multi-engine-routing.md  0007-internet-multi-engine-routing.md  0007-remote-multi-engine-routing.md  0008-remote-media-serve.md  0009-remote-join-append.md  0009-remote-provider-concurrency.md  0010-cli-ux-vocabulary.md  0010-remote-join-append.md  0011-cli-ux-vocabulary.md  0012-api-engines.md  0013-auto-routing.md  0014-advisor-price-visibility.md  0015-codex-subscription-engine.md  (+3 more)
doggi/: __init__.py  actors.py  aio.py  client.py  payloads.py  receipt.py  types.py
engine/: comfyui.py  comfyui_macos_package_lock.txt  installer.py  launcher.py
grid/: cli.py  config.py  media_runtime.py  paths.py  runtime.py  server.py
grid/cli/: _main.py  (+12 more)
internet/: __init__.py  control_plane.py  credentials.py  probe.py  relay.py  serve.py
lan/: __init__.py  config.py  media_runtime.py  runtime.py  server.py
libs/doggi/: pyproject.toml
libs/doggi/src/doggi/: errors.py
local/: __init__.py  api_media_server.py  config.py  media_engine.py  media_runtime.py  media_server.py  runtime.py  server.py
models/: download.py  media_bundles.py  store.py
packaging/: README.md  build_binary.sh  changelog.py  grid_entry.py
provider/: media_handler.py  media_server.py
remote/: __init__.py  api_keys.py  codex_auth.py  codex_callback.py  codex_oauth.py  codex_probe.py  control_plane.py  credentials.py  probe.py  relay.py  serve.py
shared/: __init__.py  _version.py  filelock.py  jsonio.py  logging_setup.py  paths.py  run_records.py  state.py
system/: detect.py
tests/: e2e_doggi.py  e2e_doggi.sh  test_changelog.py  test_doggi_handler.py  test_install_sh.py  test_lan_cli.py  test_local_cli.py
(+52 files in other folders)
