[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grid"
version = "0.1.0"
description = "LAN-only, unauthenticated Grid CLI for local provider/consumer networks."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "uvicorn>=0.34",
    "websocket-client>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
grid = "cli:main"
agrid = "cli:main"

[tool.setuptools]
py-modules = ["config", "media_runtime", "paths", "runtime", "server", "_version"]

[tool.setuptools.packages.find]
include = ["cli*", "engine*", "models*", "provider*", "system*"]

[tool.setuptools.package-data]
"engine" = ["*.txt"]
"provider" = ["workflows/*.json"]

[tool.ruff]
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
