[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grid"
version = "0.1.13"
description = "Grid: one private OpenAI-compatible endpoint for the AI engines you already run."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "tomli-w>=1.0",
    "uvicorn>=0.34",
    "websocket-client>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
grid = "cli:main"
agrid = "cli:main"

[tool.setuptools.packages.find]
include = ["cli*", "shared*", "local*", "remote*"]

[tool.setuptools.package-data]
"shared.engine" = ["*.txt"]
"shared.media" = ["workflows/*.json"]

[tool.ruff]
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
